test/indexOutOfBounds2.slq
// args: --run

def main(){
	x:=[1,2,3];
	x[2^100]=2; // error
}
